# Lima-camera-pixirad

./: .gitignore  CMakeLists.txt  Makefile  README.md
conda/camera/: meta.yaml
conda/tango/: meta.yaml
doc/: basictests.txt  index.rst  pixirad.txt
include/: PixiradCamera.h  PixiradInterface.h  PixiradReconstructionCtrlObj.h  pixiradDetector.h  pixiradDetector_old.h  pixiradFpgaTools.h  pixiradHelperFunctions.h
python/: __init__.py
sip/: PixiradCamera.sip  PixiradInterface.sip
src/: .#PixiradNet.cpp  Makefile  PixiradCamera.cpp  PixiradDetInfoCtrlObj.cpp  PixiradInterface.cpp  PixiradReconstructionCtrlObj.cpp  PixiradSyncCtrlObj.cpp  pixiradDetector.cpp  pixiradDetector_old.cpp  pixiradFpgaTools.cpp  pixiradHelperFunctions.cpp
tango/: CMakeLists.txt
test/: Makefile  PixiradTest.cpp  pixiradtest.py  tangoPyTangoTest.py
